deployments/aws/templates/stack-combined.yaml
# Veraison stack
AWSTemplateFormatVersion: 2010-09-09
Description: Veraison attestation verfication services

Parameters:
  # mandatory parameters (no defaults):
  DeploymentName:
    Type: String
    Description: |
      The name of this deployment. Defaults to the Cloudfromation stack name
  VpcId:
    Description: ID for the VPC into which Veraison will be deployed
    Type: AWS::EC2::VPC::Id
  KeyName:
    Type: AWS::EC2::KeyPair::KeyName
    Description: |
      The name of an EC2 key pair that will be used to provide access to the
      instance.
  CombinedImage:
    Type: String
    Description: ID of the AMI image to be used for the instance.
  KeycloakImage:
    Type: String
    Description: ID of the AMI image to be used for the instance.
  AdminCidr:
    Type: String
    Description: CIDR to used to configure remote access
  SubnetId:
    Type: String
    Description: ID of the subnet to be used for veraison deployment
  SubnetCidr:
    Type: String
    Description: CIDR of the subnet identified by SubnetId

  # optional parameters (have a default if are not specfied):
  ProvisioningPort:
    Type: Number
    Description: TCP port on which the provisioning service is listening
    Default: 8888
  VerificationPort:
    Type: Number
    Description: TCP port on which the verification service is listening
    Default: 8080
  ManagementPort:
    Type: Number
    Description: TCP port on which the management service is listening
    Default: 8088
  KeycloakPort:
    Type: Number
    Description: TCP port on which the management service is listening
    Default: 11111
  ServiceInstanceType:
    Description: An EC2 instance type that will be used to run EC2 Instances
    Type: String
    Default: t2.micro
  KeycloakInstanceType:
    Description: An EC2 instance type that will be used to run EC2 Instances
    Type: String
    Default: t2.micro

  RdsSubnets:
    Type: String
  RdsEngine:
    Type: String
    Default: postgres
  RdsInstanceType:
    Type: String
    Default: db.t3.micro
  RdsAllocatedStorage:
    Type: Number
    Default: 5
  RdsDb:
    Type: String
    Default: veraison
  RdsUser:
    Type: String
    Default: veraison
  RdsPassword:
    Type: String
    Default: veraison
    
Resources:

  VeraisonSecurityGroup:
    Type: AWS::EC2::SecurityGroup
    Properties:
      VpcId: !Ref VpcId
      GroupName: veraison-services
      GroupDescription: Veraison services access
      SecurityGroupIngress:
        - IpProtocol: tcp
          FromPort: 22
          ToPort: 22
          CidrIp: !Ref AdminCidr
        - IpProtocol: tcp
          FromPort: !Ref ProvisioningPort
          ToPort: !Ref ProvisioningPort
          CidrIp: !Ref AdminCidr
        - IpProtocol: tcp
          FromPort: !Ref VerificationPort
          ToPort: !Ref VerificationPort
          CidrIp: !Ref AdminCidr
        - IpProtocol: tcp
          FromPort: !Ref ManagementPort
          ToPort: !Ref ManagementPort
          CidrIp: !Ref AdminCidr
      Tags:
        - Key: veraison-deployment
          Value: !Ref DeploymentName

  KeycloakSecurityGroup:
    Type: AWS::EC2::SecurityGroup
    Properties:
      VpcId: !Ref VpcId
      GroupName: keycloak
      GroupDescription: Keycloak access
      SecurityGroupIngress:
        - IpProtocol: tcp
          FromPort: 22
          ToPort: 22
          CidrIp: !Ref AdminCidr
        - IpProtocol: tcp
          FromPort: !Ref KeycloakPort
          ToPort: !Ref KeycloakPort
          CidrIp: !Ref AdminCidr
        - IpProtocol: tcp
          FromPort: !Ref KeycloakPort
          ToPort: !Ref KeycloakPort
          CidrIp: !Ref SubnetCidr
      Tags:
        - Key: veraison-deployment
          Value: !Ref DeploymentName

  VeraisonInstance:
    Type: AWS::EC2::Instance
    Properties:
      KeyName: !Ref KeyName
      InstanceType: !Ref ServiceInstanceType
      ImageId: !Ref CombinedImage
      SubnetId: !Ref SubnetId
      SecurityGroupIds:
        - !GetAtt VeraisonSecurityGroup.GroupId
      Tags:
        - Key: veraison-deployment
          Value: !Ref DeploymentName
        - Key: deployment-instance-name
          Value: combined

  KeycloakInstance:
    Type: AWS::EC2::Instance
    Properties:
      KeyName: !Ref KeyName
      InstanceType: !Ref ServiceInstanceType
      ImageId: !Ref KeycloakImage
      SubnetId: !Ref SubnetId
      SecurityGroupIds:
        - !GetAtt KeycloakSecurityGroup.GroupId
      Tags:
        - Key: veraison-deployment
          Value: !Ref DeploymentName
        - Key: deployment-instance-name
          Value: keycloak

  VeraisonIpAddress:
    Type: AWS::EC2::EIP
    DependsOn: VeraisonInstance
    Properties:
      Domain: vpc
      InstanceId: !Ref VeraisonInstance
      Tags:
        - Key: veraison-deployment
          Value: !Ref DeploymentName

  KeycloakIpAddress:
    Type: AWS::EC2::EIP
    DependsOn: VeraisonInstance
    Properties:
      Domain: vpc
      InstanceId: !Ref KeycloakInstance
      Tags:
        - Key: veraison-deployment
          Value: !Ref DeploymentName

  RdsSubnetGroup:
    Type: AWS::RDS::DBSubnetGroup
    Properties:
      DBSubnetGroupName: VeraisonRdsSubnetGroup
      DBSubnetGroupDescription: combined stack RDS subnet group
      SubnetIds: !Split [",", !Ref RdsSubnets]
      Tags:
        - Key: veraison-deployment
          Value: !Ref DeploymentName

  RdsSecurityGroup:
    Type: AWS::EC2::SecurityGroup
    Properties:
      GroupDescription: Security Group for RDS instances.
      VpcId: !Ref VpcId
      SecurityGroupIngress:
      - CidrIp: !Ref SubnetCidr
        FromPort: 5432
        ToPort: 5432
        IpProtocol: TCP
      - CidrIp: !Ref AdminCidr
        FromPort: 5432
        ToPort: 5432
        IpProtocol: TCP
      Tags:
        - Key: veraison-deployment
          Value: !Ref DeploymentName

  RdsInstance:
    Type: AWS::RDS::DBInstance
    DependsOn:
      - RdsSubnetGroup
      - RdsSecurityGroup
    Properties:
      Engine: !Ref RdsEngine
      DBInstanceClass: !Ref RdsInstanceType
      AllocatedStorage: !Ref RdsAllocatedStorage
      DBName: !Ref RdsDb
      MasterUsername: !Ref RdsUser
      MasterUserPassword: !Ref RdsPassword
      DBSubnetGroupName: VeraisonRdsSubnetGroup
      PubliclyAccessible: true
      VPCSecurityGroups:
        - !Ref RdsSecurityGroup
      Tags:
        - Key: veraison-deployment
          Value: !Ref DeploymentName
